--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
+  },
+  "devDependencies": {
+    "typescript": "^2.6.2"
   }
 }
