--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "webpack --progress --colors --config ./webpack.config.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -11,12 +12,19 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "jquery": "^3.2.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
-    "typescript": "^2.6.2"
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "script-loader": "^0.7.2",
+    "style-loader": "^0.19.1",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
   }
 }
