--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --progress --colors --config ./webpack.config.js"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -19,6 +20,9 @@
     "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
+    "@types/backbone": "^1.3.42",
+    "@types/jquery": "^3.2.17",
+    "@types/socket.io-client": "^1.4.32",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "script-loader": "^0.7.2",
