--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/backbone": "^1.3.42",
     "@types/jquery": "^3.2.17",
+    "@types/socket.io": "^1.4.31",
     "@types/socket.io-client": "^1.4.32",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
